<resources>
    <string name="app_name">UTS_GreetingCard</string>
    <string name="Login">Login</string>
    <string name="Welcome">Welcome Back Please Login to Continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="choose">Pilih Kartu Ucapan</string>
    <string name="ultah">Ulang Tahun</string>
    <string name="nikah">Pernikahan</string>
    <string name="Eid">Hari raya</string>
    <string name="masukkan">Masukkan isi kartu ucapan</string>
    <string name="namaPenerima">Masukkan Nama Penerima</string>
    <string name="ucapan">Masukkan kata kata ucapan</string>
    <string name="hintNama">Mulyono</string>
    <string name="hintUcapan">Selamat sukses</string>
    <string name="buat">Buat kartu</string>
    <string name="edit">Edit Kartu</string>
    <string name="simpan">Simpan Kartu</string>
</resources>